<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background Gradient -->
    <View
        android:id="@+id/gradientBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_gradient" />


    <!-- App Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="63dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/logo_description" />

    <!-- Username Field -->
    <EditText
        android:id="@+id/email"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="310dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_email"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/ic_email_wrapper"
        android:drawablePadding="16dp"
        android:paddingStart="15dp"
        android:autofillHints="email"
        android:textColor="#000000"
        android:background="@drawable/outlined_background"
        android:fontFamily="sans-serif"
        android:textSize="20sp" />

    <!-- Password Field -->
    <EditText
        android:id="@+id/password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@id/email"
        android:layout_marginTop="35dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password_wrapper"
        android:drawablePadding="16dp"
        android:paddingStart="15dp"
        android:autofillHints="password"
        android:textColor="#000000"
        android:background="@drawable/outlined_background"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:layout_centerHorizontal="true" />

    <!-- Login Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="202dp"
        android:layout_height="55dp"
        android:layout_below="@id/password"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_login"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_with_border"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/btn_login_description"/>

    <!-- Signup Link -->
    <TextView
        android:id="@+id/signup_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:text="@string/signup_prompt"
        android:textSize="22sp"
        android:textColor="#FFFFFF"
        android:fontFamily="sans-serif"
        android:gravity="center" />

</RelativeLayout>
