<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient">

    <ImageView
        android:id="@+id/signup_logo"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/username"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/outlined_background"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/ic_user_wrapper"
        android:autofillHints="username"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="#000000"
        android:drawablePadding="16dp"
        app:layout_constraintTop_toBottomOf="@id/signup_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/outlined_background"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email_wrapper"
        android:autofillHints="emailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:drawablePadding="16dp"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/outlined_background"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password_wrapper"
        android:autofillHints="password"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="#000000"
        android:drawablePadding="16dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/outlined_background"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password_wrapper"
        android:autofillHints="password"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="#000000"
        android:drawablePadding="16dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_button"
        android:layout_width="202dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_with_border"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_prompt"
        android:textColor="#DDDDDD"
        android:textSize="22sp"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toBottomOf="@id/signup_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
